# SYVERN

./: .gitignore  README.md  README.zh.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
data/alignment/: manual_v1.jsonl  (+4 more)
doc/: USER_MANUAL.zh.md  alignment_dataset_spec.md  sysmlv2_harness_final_design.md  syvern_bug2_element_degeneracy_fix.md  syvern_element_set_wiring_design.md  syvern_hld.md  syvern_lld.md  syvern_phase2_design.md  syvern_pilot_backend_design.md
scripts/: augment_sft_instructions.py  check_alignment_dataset.py  check_data_filter_gate.py  decompose_sft_data.py  pilot-real.local.example.ps1  prepare_sft_data.py  split_sft_data.py  start-pilot-real.ps1  validate_and_filter.py
tests/: test_alignment.py  test_api.py  test_audit.py  test_benchmark.py  test_calibration.py  test_cli.py  test_coverage_simple.py  test_data_filter_gate.py  test_element_set_wiring.py  test_element_summary.py  test_formal_adapter.py  test_imports.py  test_instruction_aug.py  test_intent.py  test_intent_judge_adapter.py  test_ipt.py  test_ipt_perturb.py  test_monitoring.py  test_monticore_adapter.py  test_normalization_cache.py  test_online_reward_smoke.py  test_perturbation_adapter.py  test_pilot_adapter.py  test_pipeline.py  test_pipeline_factory.py  test_records.py  test_reward_ops.py  test_robustness.py  test_rules_veto_reward.py  test_settings_env.py  test_sft_dataset.py  test_sft_filter_api.py  test_sft_refactor_pipeline.py  test_start_pilot_real_script.py  test_storage_factory.py  test_structural.py  test_structural_matcher_adapter.py  test_subset.py
(+96 files in other folders)
